# skcr

./: .gitignore  .goreleaser.yaml  AGENTS.md  Makefile  README.md  agentic.bake.yaml  go.mod  go.sum  pyproject.toml
.agentic/claude/: AGENTS.md
.agentic/codex/: AGENTS.md
.agentic/github-copilot/: AGENTS.md
.agentic/gitlab-duo/: AGENTS.md
.agentic/opencode/: AGENTS.md
.agents/skills/architecture-reviewer/: SKILL.md
.agents/skills/ci-cd-reviewer/: SKILL.md
.agents/skills/compliance-governance-reviewer/: SKILL.md  skill.yaml
.agents/skills/cost-based-planner/: SKILL.md
.agents/skills/dependency-supply-chain-reviewer/: SKILL.md
.agents/skills/documentation-maintainer/: SKILL.md
.agents/skills/iac-gitops-reviewer/: SKILL.md
.agents/skills/incident-postmortem-assistant/: SKILL.md
.agents/skills/observability-reviewer/: SKILL.md
.agents/skills/release-readiness-reviewer/: SKILL.md
.agents/skills/requirements-analyst/: SKILL.md
.agents/skills/safe-implementer/: SKILL.md
.agents/skills/secrets-reviewer/: SKILL.md
.agents/skills/security-reviewer/: SKILL.md
.agents/skills/test-strategy-engineer/: SKILL.md
.agents/skills/threat-modeler/: SKILL.md
.agents/skills/universal-skill-creator/: SKILL.md
.agents/skills/verification-reviewer/: SKILL.md
.claude/agents/: ci-cd-reviewer.md  devsecops-reviewer.md  release-readiness-reviewer.md  test-runner.md
.claude/skills/architecture-reviewer/: SKILL.md
.claude/skills/ci-cd-reviewer/: SKILL.md
.claude/skills/compliance-governance-reviewer/: SKILL.md
.claude/skills/cost-based-planner/: SKILL.md
.claude/skills/dependency-supply-chain-reviewer/: SKILL.md
.claude/skills/documentation-maintainer/: SKILL.md  skill.yaml
.claude/skills/iac-gitops-reviewer/: SKILL.md
.claude/skills/incident-postmortem-assistant/: SKILL.md
.claude/skills/observability-reviewer/: SKILL.md
.claude/skills/release-readiness-reviewer/: SKILL.md  skill.yaml
.claude/skills/requirements-analyst/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: architecture-reviewer.prompt.md  ci-cd-reviewer.prompt.md  compliance-governance-reviewer.prompt.md  cost-based-planner.prompt.md  dependency-supply-chain-reviewer.prompt.md  documentation-maintainer.prompt.md  iac-gitops-reviewer.prompt.md  incident-postmortem-assistant.prompt.md  observability-reviewer.prompt.md  release-readiness-reviewer.prompt.md  requirements-analyst.prompt.md  safe-implementer.prompt.md  secrets-reviewer.prompt.md  security-reviewer.prompt.md  test-strategy-engineer.prompt.md  threat-modeler.prompt.md  universal-skill-creator.prompt.md  verification-reviewer.prompt.md
.ollama/: README.md
cmd/skcr/: main.go  main_test.go
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  CONFIGURATION.md  GITLAB_DUO.md  SDLC_SKILLS.md  USAGE.md  skill-content-readiness.md  skill-versioning.md
examples/: agentic.bake.yaml
examples/.ollama/: Modelfile
internal/bake/: bake.go  bake_test.go
internal/catalog/: catalog.go  catalog_test.go
internal/cli/: add.go  bake.go  clean.go  cli_test.go  compatibility.go  completion.go  completions.go  doctor.go  export.go  init.go  list.go  list_skills.go  list_targets.go  remove.go  rename.go  root.go  scaffold.go  status.go  sync.go  validate.go  version.go
internal/lockfile/: lockfile.go  lockfile_test.go
internal/models/: models.go  models_test.go
internal/renderer/: renderer.go  renderer_test.go
internal/scaffold/: skill.go  skill_templates.go  skill_templates2.go  skill_templates_test.go  skill_test.go
internal/skilllock/: skilllock.go  skilllock_test.go
internal/skillversion/: skillversion.go  skillversion_test.go
internal/validator/: validator.go  validator_test.go
skills/architecture-reviewer/: SKILL.md
skills/ci-cd-reviewer/: SKILL.md
skills/compliance-governance-reviewer/: SKILL.md
skills/cost-based-planner/: SKILL.md  skill.yaml
skills/dependency-supply-chain-reviewer/: SKILL.md  skill.yaml
skills/documentation-maintainer/: SKILL.md  skill.yaml
skills/iac-gitops-reviewer/: SKILL.md
skills/incident-postmortem-assistant/: SKILL.md
skills/observability-reviewer/: README.md  SKILL.md  skill.yaml
skills/release-readiness-reviewer/: SKILL.md
skills/requirements-analyst/: SKILL.md
skills/safe-implementer/: SKILL.md  skill.yaml
skills/secrets-reviewer/: SKILL.md  skill.yaml
skills/security-reviewer/: SKILL.md
skills/test-strategy-engineer/: SKILL.md  skill.yaml
skills/threat-modeler/: SKILL.md
skills/universal-skill-creator/: README.md  SKILL.md
skills/verification-reviewer/: SKILL.md
src/agentic_template_kit/: bake.py  catalog.py  cli.py  lockfile.py  models.py  renderer.py  validator.py
tests/: test_cli.py  test_renderer.py  test_templates.py  test_validator.py
(+191 files in other folders)
