[project]
name = "agentic-template-kit"
version = "0.7.0"
description = "Generate agentic DevSecOps SDLC instructions, skills, prompts, rules, and flow templates for Codex, GitLab Duo, GitHub Copilot, Claude Code, OpenHands, OpenCode, Ollama, and generic agentic systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Agentic Template Kit Maintainers" }
]
keywords = ["agents", "devsecops", "sdlc", "codex", "gitlab-duo", "copilot", "claude", "openhands", "opencode", "ollama"]
dependencies = [
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0"
]

[project.scripts]
agentic-template = "agentic_template_kit.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
