[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-template-kit"
version = "0.7.1"
description = "Generate agentic DevSecOps SDLC instructions, skills, prompts, rules, and flow templates for Codex, GitLab Duo, GitHub Copilot, Claude Code, OpenHands, OpenCode, Ollama, and generic agentic systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Agentic Template Kit Maintainers" }
]
keywords = [
  "agents",
  "agentic",
  "devsecops",
  "sdlc",
  "codex",
  "gitlab-duo",
  "copilot",
  "claude",
  "openhands",
  "opencode",
  "ollama"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0"
]

[project.urls]
Homepage = "https://example.invalid/agentic-template-kit"
Repository = "https://example.invalid/agentic-template-kit"
Issues = "https://example.invalid/agentic-template-kit/issues"

[project.scripts]
agentic-template = "agentic_template_kit.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_template_kit"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentic_template_kit/templates" = "agentic_template_kit/templates"

[tool.hatch.build.targets.sdist]
include = [
  "src/agentic_template_kit",
  "tests",
  "README.md",
  "LICENSE",
  "docs",
  "examples",
  "pyproject.toml"
]